<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvEstFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/estimatedFuelConsumption"
        android:textAlignment="textEnd"
        android:textSize="@dimen/tvSizeLarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvTimeNow" />

    <TextView
        android:id="@+id/tvLabel_TimeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/labelTimeNow"
        android:textSize="@dimen/tvSizeSmall"
        app:layout_constraintStart_toStartOf="@+id/tvTimeNow"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/currentTime"
        android:textAlignment="textEnd"
        android:textSize="@dimen/tvSizeLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabel_TimeNow" />

    <TextView
        android:id="@+id/tvUnit_EstFuel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/unitEstFuel"
        android:textAlignment="viewStart"
        android:textSize="@dimen/tvSizeMiddle"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEstFuel"
        app:layout_constraintStart_toEndOf="@+id/tvEstFuel" />


    <EditText
        android:id="@+id/etStartTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:imeOptions="actionDone"
        android:inputType="time"
        android:text="@string/etDefault_StartTime"
        android:textAlignment="center"
        android:textSize="@dimen/tvSizeSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabel_StartTime" />

    <EditText
        android:id="@+id/etFinishTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:cursorVisible="false"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:imeOptions="actionDone"
        android:inputType="time"
        android:text="@string/etDefaultFinishTime"
        android:textAlignment="center"
        android:textSize="@dimen/tvSizeSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvLabel_StartTime"
        app:layout_constraintTop_toBottomOf="@+id/tvLabel_StartTime3" />

        <TextView
            android:id="@+id/tvLabel_StartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/labelStartTime"
            android:textSize="@dimen/tvSizeSmall"
            app:layout_constraintStart_toStartOf="@+id/etStartTime"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabel_StartTime3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/labelFinishTime"
            android:textSize="@dimen/tvSizeSmall"
            app:layout_constraintStart_toStartOf="@+id/tvLabel_StartTime"
            app:layout_constraintTop_toBottomOf="@+id/etStartTime" />

        <TextView
            android:id="@+id/tvLabel_EstFuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelExtFuel"
            android:textSize="@dimen/tvSizeSmall"
            app:layout_constraintBottom_toTopOf="@+id/tvEstFuel"
            app:layout_constraintStart_toStartOf="@+id/tvTimeNow" />
</androidx.constraintlayout.widget.ConstraintLayout>